--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "express": "^4.18.2",
     "jsonwebtoken": "^9.0.1",
     "mongoose": "^7.4.2",
+    "react-icons": "^4.11.0",
     "uuid": "^9.0.0"
   },
   "devDependencies": {
